# mcp_csv_analyser

./: README.md  pyproject.toml
mcp_agent/: csv_agent.py  dashboard_agent.py  main.py
mcp_agent/data/: dashboard.html
