[project]
name = "mcpserver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "autogen-agentchat>=0.7.2",
    "autogen-ext[openai]>=0.7.2",
    "langchain>=0.3.27",
    "langchain-community>=0.3.0",
    "langchain-core>=0.3.74",
    "langchain-groq>=0.3.7",
    "langchain-mcp>=0.1.0",
    "langchain-mcp-adapters>=0.1.9",
    "langchain-openai>=0.3.30",
    "langgraph>=0.6.5",
    "mcp[cli]>=1.13.0",
    "polars>=1.32.3",
    "streamlit>=1.48.1",
]
